# bayesian

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
migrations/: 001_initial_schema.sql
scripts/: analyze_correlation.py  build_time_bars.py  calibrate_bars.py  databento_utils.py  diag_momentum.py  diag_mr_calls.py  download_15yr.py  full_pipeline.py  generate_synthetic_data.py  import_data.py  ingest_databento.py  run_backtest.py  run_backtest_only.py  run_live.py  run_orb_backtest.py  train_hmm.py
sql/: schema.sql
src/bayesbot/: __init__.py  cli.py  config.py
src/bayesbot/backtest/: __init__.py  engine.py  metrics.py  slippage.py  walk_forward.py
src/bayesbot/dashboard/: server.py
src/bayesbot/execution/: __init__.py  broker.py  ib_broker.py  live_loop.py  paper_broker.py  preflight.py  recovery.py
src/bayesbot/features/: __init__.py  normalizer.py  pipeline.py
src/bayesbot/indicators/: __init__.py  amihud.py  atr.py  bar_duration.py  buy_sell_imbalance.py  close_sma_ratio.py  garman_klass.py  high_low_range.py  kyle_lambda.py  log_returns.py  order_flow.py  parkinson_volatility.py  rate_of_change.py  realized_volatility.py  tick_count.py  volume_sma_ratio.py  vwap_deviation.py
src/bayesbot/regime/: __init__.py  bocpd.py  detector.py  forward_filter.py  hmm.py
src/bayesbot/risk/: __init__.py  cppi.py  drawdown_brake.py  kelly.py  regime_scaler.py
src/bayesbot/scripts/: calibrate_bars.py  import_data.py  (+4 more)
tests/: conftest.py  test_bars.py  test_features.py  test_regime.py  test_risk.py  test_strategy.py
(+8 files in other folders)
