[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesbot"
version = "0.1.0"
description = "Bayesian semi-supervised trading bot for MES micro futures"
requires-python = ">=3.10"
dependencies = [
    # Data
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=0.20",
    "scipy>=1.12",
    # ML/Stats
    "scikit-learn>=1.4",
    "hmmlearn>=0.3",
    # Broker
    "ib_insync>=0.9.86",
    # Database
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    # API/Dashboard
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "jinja2>=3.1",
    # Config/Logging
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    # Redis
    "redis>=5.0",
    # Data providers
    "databento>=0.39",
    # CLI
    "click>=8.1",
    # Visualization
    "plotly>=5.18",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]
pymc = [
    "pymc>=5.10",
]

[project.scripts]
bayesbot = "bayesbot.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
